Fixes for Melanie's bugs: * page layout (scrollbar) * help modal * number of attemps on calibration * copyedits

--- a/source/application/Style/webgazer.styl
+++ b/source/application/Style/webgazer.styl
@@ -2,6 +2,12 @@ body {
     min-width:600px!important;
 }
 
+#webgazer-calibration {
+    position: absolute;
+    display: block;
+    left: 0;
+    top: 0;
+}
 /* Video Feed Styling */
 #overlay {
     z-index: 1;
